...
            updateQuestionIndex()
            questionFactory?.requestNextQuestion()
        } else {
            let message = makeResultsMessage()
            
            let alertModel = AlertModel(
                title: "Раунд окончен!",
                message: message,
                buttonText: "Сыграть ещё раз",
                completion: { [weak self] in
                    guard let self = self else { return }
                    self.restartGame()
                    self.questionFactory?.requestNextQuestion()
...
